--- a/code/parquesdfcodigo.ipynb
+++ b/code/parquesdfcodigo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_parques = pd.read_csv(\"./parques.csv\")\n",
+    "df_parques = pd.read_csv(\"../data/parques.csv\")\n",
     "\n",
     "print(df_parques)"
    ]
@@ -303,7 +303,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3.9.5 64-bit ('core': conda)",
-   "name": "pythonjvsc74a57bd0f3286ea705001ec0bb3381152b489620b95b108b2c9769628ed9388c599911a5"
+   "name": "python395jvsc74a57bd0f3286ea705001ec0bb3381152b489620b95b108b2c9769628ed9388c599911a5"
   },
   "language_info": {
    "codemirror_mode": {
@@ -316,11 +316,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "f3286ea705001ec0bb3381152b489620b95b108b2c9769628ed9388c599911a5"
-   }
   },
   "orig_nbformat": 3
  },
