--- a/code/populationcodigo.ipynb
+++ b/code/populationcodigo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_population = pd.read_csv(\"./population.csv\")\n",
+    "df_population = pd.read_csv(\"../data/population.csv\")\n",
     "\n",
     "print(df_population)"
    ]
