--- a/code/areaperroscodigo.ipynb
+++ b/code/areaperroscodigo.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "df_areaperros = pd.read_csv(\"./areaperro.csv\")\n",
+    "df_areaperros = pd.read_csv(\"../data/areaperro.csv\")\n",
     "print(df_areaperros)"
    ]
   },
