--- a/code/rentacodigo.ipynb
+++ b/code/rentacodigo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "df_renta = pd.read_csv(\"./parques.csv\")\n",
+    "df_renta = pd.read_csv(\"../data/parques.csv\")\n",
     "\n",
     "print(df_renta)"
    ]
@@ -195,7 +195,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3.9.5 64-bit ('core': conda)",
-   "name": "pythonjvsc74a57bd0f3286ea705001ec0bb3381152b489620b95b108b2c9769628ed9388c599911a5"
+   "name": "python395jvsc74a57bd0f3286ea705001ec0bb3381152b489620b95b108b2c9769628ed9388c599911a5"
   },
   "language_info": {
    "codemirror_mode": {
@@ -209,12 +209,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
-  "metadata": {
-   "interpreter": {
-    "hash": "f3286ea705001ec0bb3381152b489620b95b108b2c9769628ed9388c599911a5"
-   }
-  },
-  "orig_nbformat": 2
+  "orig_nbformat": 3
  },
  "nbformat": 4,
  "nbformat_minor": 2
